diesel_derives/src/tests/snapshots/diesel_derives__tests__sql_type_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
---
#[allow(unused_imports)]
#[allow(unused_qualifications)]
const _: () = {
    use diesel;
    impl diesel::sql_types::SqlType for Integer {
        type IsNull = diesel::sql_types::is_nullable::NotNull;
        const IS_ARRAY: bool = false;
    }
    impl diesel::sql_types::SingleValue for Integer {}
};
