diesel_derives/src/tests/snapshots/diesel_derives__tests__sql_type_enum (mariadb).snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(SqlType)]\n#[diesel(mariadb_type(name = \"Long\"))]\n#[diesel(enum_type)]\nstruct Integer;\n"
---
const _: () = {
    use ::diesel;
    impl diesel::sql_types::SqlType for Integer {
        type IsNull = diesel::sql_types::is_nullable::NotNull;
        const IS_ARRAY: bool = false;
    }
    impl diesel::sql_types::SingleValue for Integer {}
    impl<__DB, const __ANYWAY: bool> diesel::sql_types::EnumSqlType<__ANYWAY, __DB>
    for Integer
    where
        __DB: diesel::backend::Backend,
        diesel::internal::derives::sql_type::EnumTypeMapping: diesel::internal::derives::sql_type::EnumMapping<
            __DB,
        >,
    {
        type Strategy = diesel::internal::derives::sql_type::EnumTypeMapping;
    }
    impl diesel::sql_types::HasSqlType<Integer> for diesel::mariadb::Mariadb {
        fn metadata(_: &mut ()) -> diesel::mariadb::MariadbType {
            diesel::mariadb::MariadbType::Long
        }
    }
};
