diesel_derives/src/tests/snapshots/diesel_derives__tests__with_paths.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "allow_tables_to_appear_in_same_query! {\n    schema::users, schema::posts, comments\n}\n"
---
impl ::diesel::query_source::TableNotEqual<schema::posts::table>
for schema::users::table {}
impl ::diesel::query_source::TableNotEqual<schema::users::table>
for schema::posts::table {}
impl ::diesel::query_source::TableNotEqual<comments::table> for schema::users::table {}
impl ::diesel::query_source::TableNotEqual<schema::users::table> for comments::table {}
impl ::diesel::query_source::TableNotEqual<comments::table> for schema::posts::table {}
impl ::diesel::query_source::TableNotEqual<schema::posts::table> for comments::table {}
